--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,5 +12,5 @@ steps:
   inputs:
     azureSubscription: 'gab-dotNetSP'
     appType: 'webAppLinux'
-    appName: 'gab-webapp'
+    appName: 'gab-webapp1'
     package: '$(System.DefaultWorkingDirectory)/**/*.zip'
