--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,3 +14,9 @@ steps:
     appType: 'webAppLinux'
     appName: 'gab-webapp1'
     package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
