Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,10 @@ steps:
     appType: 'webAppLinux'
     appName: 'gab-webapp1'
     package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+  
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: 'build'
     
 - task: PublishBuildArtifacts@1
   inputs:
